--- a/style.css
+++ b/style.css
@@ -1,83 +1,59 @@
+
 *{
 	margin: 0px;
 	padding: 0px;
+
 }
 body{
-	background-image: url(https://img.freepik.com/free-vector/watercolor-nature-background-with-leaves_52683-59449.jpg?w=2000) ;
-	background-attachment: fixed;
+
+	background-image: url(https://coolbackgrounds.io/images/unsplash/josh-bean-medium-9501ba9f.jpg);
+background-attachment: fixed;
 	background-size: cover;
 	font-family: new time roman;
 }
 h1{
+
 	font-size: 40px;
-	color: gray;
+	color: white;
 	margin-top: 20px;
 	margin-bottom: 30px;
 }
 .label{
-	font-size: 19px;
-	margin-top: 20px;
-	font-weight: normal;
+font-size: 19px;
+margin-top: 20px;
+font-weight: normal;
 
 }
 .form-control{
-	background: rgba(255, 255, 255, 0.2) ;
+	background: rgb(255,255,255,0.2);
 	border: 0px;
 	border-radius: 0px;
 	border-bottom: 2px solid white;
-	font-size: 21px;
-	color: white;
-	margin-top: 20px;
+font-size: 21px;
+color: white;
+margin-top: 20px;
 }
-option{
-	color: #666;
-}
-.btn-info{
-	margin-top: 30px;
-	margin-left: 150px;
-	width: 180px;
-	font-size: 19px;
-	border-radius: 1000px;
-}
-.col-md-6{
-	background: rgba(0, 0, 0, 0.4);
-	height: 660px;
-	box-shadow: -1px 1px 60px 10px ;
-}
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #3e8e41;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  overflow: auto;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-.show {display:block;}
+select {
+	font-family: new time roman;
+        margin-bottom: 10px;
+        margin-top: 10px;
+        font-family: cursive, sans-serif;
+        outline: 0;
+        background: white;
+        color: black;
+        border: 1px solid crimson;
+        padding: 4px;
+        border-radius: 9px;
+      }
+      .btn-info{
+      	margin-top: 30px;
+      	margin-left: 150px;
+      	width: 180px;
+      	font-size: 19px;
+      border-radius: 1000px;
+      }
+      .col-md-6{
+      	background: rgba(0, 0, 0, 0.4);
+      	height: 660px;
+      	box-shadow: -1px 1px 60px 10px black inset;
+      }
